axum-debug/tests/fail/generics.stderr
error: `#[axum_debug::debug_handler]` doesn't support generic functions
 --> tests/fail/generics.rs:4:17
  |
4 | async fn handler<T>() {}
  |                 ^^^

error[E0282]: type annotations needed
 --> tests/fail/generics.rs:4:10
  |
4 | async fn handler<T>() {}
  | -----    ^^^^^^^ cannot infer type for type parameter `T` declared on the function `handler`
  | |
  | consider giving `future` a type
